- add gmNotifications.sql

--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.13 $
+version = $Revision: 1.14 $
 
 #----------------------------------
 [installation]
@@ -90,6 +90,7 @@ gmI18N.sql
 gmAudit.sql
 gmCrossDB_FKs.sql
 gmCrossDB_FK-views.sql
+gmNotifications.sql
 $schema$
 
 #----------------------------------
@@ -164,7 +165,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.13  2003-11-02 12:48:55  ncq
+# Revision 1.14  2003-11-28 08:49:40  ncq
+# - add gmNotifications.sql
+#
+# Revision 1.13  2003/11/02 12:48:55  ncq
 # - add schema base directory option to config files
 # - hence we don't need the sql link anymore
 #
