--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.11 $
+version = $Revision: 1.12 $
 
 #----------------------------------
 [installation]
@@ -121,6 +121,7 @@ gmAudit.sql
 gmCrossDB_FKs.sql
 gmCrossDB_FK-views.sql
 gmScoring.sql
+gmNotifications.sql
 $schema$
 
 #----------------------------------
@@ -191,7 +192,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.11  2003-11-11 19:22:57  ncq
+# Revision 1.12  2003-11-28 08:49:40  ncq
+# - add gmNotifications.sql
+#
+# Revision 1.11  2003/11/11 19:22:57  ncq
 # - fix amis bootstrap file
 # - leave name empty for local host
 #
