--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.23 $
+version = $Revision: 1.24 $
 
 #----------------------------------
 [installation]
@@ -159,6 +159,7 @@ gmAudit.sql
 gmCrossDB_FKs.sql
 gmCrossDB_FK-views.sql
 gmScoring.sql
+gmNotifications.sql
 $schema$
 
 #----------------------------------
@@ -229,7 +230,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.23  2003-11-02 12:48:55  ncq
+# Revision 1.24  2003-11-28 08:49:40  ncq
+# - add gmNotifications.sql
+#
+# Revision 1.23  2003/11/02 12:48:55  ncq
 # - add schema base directory option to config files
 # - hence we don't need the sql link anymore
 #
