--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.21 $
+version = $Revision: 1.22 $
 
 #----------------------------------
 [installation]
@@ -121,6 +121,7 @@ gmAudit.sql
 gmCrossDB_FKs.sql
 gmCrossDB_FK-views.sql
 gmScoring.sql
+gmNotifications.sql
 $schema$
 
 #----------------------------------
@@ -209,7 +210,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.21  2003-11-05 23:51:22  ncq
+# Revision 1.22  2003-11-28 08:49:40  ncq
+# - add gmNotifications.sql
+#
+# Revision 1.21  2003/11/05 23:51:22  ncq
 # - apply Andreas' changes
 #
 # Revision 1.20  2003/11/03 22:26:38  ncq
