- add "notification disable" option - update template conf file - use notification schema generator in bootstrapper

--- a/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-au.conf,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -48,6 +48,7 @@ $schema$
 name = gnumed
 server alias = local host
 audit disable = 1
+notification disable = 1
 schema = $schema$
 $schema$
 
@@ -92,7 +93,12 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-au.conf,v $
-# Revision 1.2  2003-11-02 12:48:55  ncq
+# Revision 1.3  2003-11-28 10:00:41  ncq
+# - add "notification disable" option
+# - update template conf file
+# - use notification schema generator in bootstrapper
+#
+# Revision 1.2  2003/11/02 12:48:55  ncq
 # - add schema base directory option to config files
 # - hence we don't need the sql link anymore
 #
