--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.11 $
+version = $Revision: 1.12 $
 
 #----------------------------------
 [installation]
@@ -94,6 +94,7 @@ name = gnumed
 server alias = local host
 audit disable = 1
 scoring disable = 1
+notification disable = 1
 schema = $schema$
 $schema$
 
@@ -138,7 +139,12 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.11  2003-11-26 23:57:51  ncq
+# Revision 1.12  2003-11-28 10:00:41  ncq
+# - add "notification disable" option
+# - update template conf file
+# - use notification schema generator in bootstrapper
+#
+# Revision 1.11  2003/11/26 23:57:51  ncq
 # - add Prevenar-Impfpläne
 #
 # Revision 1.10  2003/11/11 19:22:57  ncq
