--- a/gnumed/gnumed/server/bootstrap/migrate-standard.conf
+++ b/gnumed/gnumed/server/bootstrap/migrate-standard.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/migrate-standard.conf,v $
-version = $Revision: 1.16 $
+version = $Revision: 1.17 $
 
 #----------------------------------
 [installation]
@@ -82,6 +82,7 @@ audit fields table = audit_fields
 scoring disable = 0
 scoring table prefix = score_
 scoring fields table = scoring_fields
+notification disable = 0
 schema base directory = ../sql/
 schema = $schema$
 gmSchemaRevision.sql
@@ -91,6 +92,7 @@ gmAudit.sql
 gmCrossDB_FKs.sql
 gmCrossDB_FK-views.sql
 gmScoring.sql
+gmNotifications.sql
 $schema$
 
 #----------------------------------
@@ -176,7 +178,12 @@ $language activation$
 
 #----------------------------------
 # $Log: migrate-standard.conf,v $
-# Revision 1.16  2003-11-02 12:48:55  ncq
+# Revision 1.17  2003-11-28 10:00:41  ncq
+# - add "notification disable" option
+# - update template conf file
+# - use notification schema generator in bootstrapper
+#
+# Revision 1.16  2003/11/02 12:48:55  ncq
 # - add schema base directory option to config files
 # - hence we don't need the sql link anymore
 #
