--- a/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-au.conf,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -49,6 +49,7 @@ name = gnumed
 server alias = local host
 audit disable = 1
 notification disable = 1
+scoring disable = 1
 schema = $schema$
 $schema$
 
@@ -56,7 +57,7 @@ $schema$
 # servers
 #----------------------------------
 [server local host]
-name = 127.0.0.1
+name = 
 port = 5432
 template database = template1
 super user alias = postgres
@@ -93,7 +94,11 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-au.conf,v $
-# Revision 1.3  2003-11-28 10:00:41  ncq
+# Revision 1.4  2003-12-29 15:19:11  uid66147
+# - disable scoring table generation
+# - for local host set name to empty
+#
+# Revision 1.3  2003/11/28 10:00:41  ncq
 # - add "notification disable" option
 # - update template conf file
 # - use notification schema generator in bootstrapper
