--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.12 $
+version = $Revision: 1.13 $
 
 #----------------------------------
 [installation]
@@ -47,6 +47,7 @@ schema base directory = ../sql/country.specific/de/
 schema = $schema$
 gmDemographics.de.sql
 gmDemographics-Data.de.sql
+PLZ.sql
 $schema$
 
 [service clinical-de]
@@ -139,7 +140,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.12  2003-11-28 10:00:41  ncq
+# Revision 1.13  2003-12-29 15:19:39  uid66147
+# - add PLZ.sql
+#
+# Revision 1.12  2003/11/28 10:00:41  ncq
 # - add "notification disable" option
 # - update template conf file
 # - use notification schema generator in bootstrapper
