- reworked public DB generation

--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.13 $
+version = $Revision: 1.14 $
 
 #----------------------------------
 [installation]
@@ -63,6 +63,7 @@ gmClinical-Data.de.sql
 Impfstoffe.sql
 Impfplan-Prevenar.sql
 STIKO-Impfkalender.sql
+Impfplan-Influenza.sql
 $schema$
 
 [service documents-de]
@@ -140,7 +141,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.13  2003-12-29 15:19:39  uid66147
+# Revision 1.14  2003-12-29 19:11:13  uid66147
+# - reworked public DB generation
+#
+# Revision 1.13  2003/12/29 15:19:39  uid66147
 # - add PLZ.sql
 #
 # Revision 1.12  2003/11/28 10:00:41  ncq
