--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.12 $
+version = $Revision: 1.13 $
 
 #----------------------------------
 [installation]
@@ -134,6 +134,7 @@ procedural language library check = yes
 schema base directory = ../sql/
 schema = $schema$
 gmTestAccounts.sql
+gmPublicAccounts.sql
 $schema$
 
 #----------------------------------
@@ -192,7 +193,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.12  2003-11-28 08:49:40  ncq
+# Revision 1.13  2003-12-29 19:11:13  uid66147
+# - reworked public DB generation
+#
+# Revision 1.12  2003/11/28 08:49:40  ncq
 # - add gmNotifications.sql
 #
 # Revision 1.11  2003/11/11 19:22:57  ncq
