More sane loggin on Psql.py in monolithic-core, gmPublicAccounts.sql droppped as it repeats gmTestAccounts.sql

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.13 $
+version = $Revision: 1.14 $
 
 #----------------------------------
 [installation]
@@ -126,7 +126,7 @@ $schema$
 
 #----------------------------------
 [server local host]
-name = 
+name =  127.0.0.1
 port = 5432
 template database = template1
 super user alias = postgres
@@ -134,17 +134,16 @@ procedural language library check = yes
 schema base directory = ../sql/
 schema = $schema$
 gmTestAccounts.sql
-gmPublicAccounts.sql
 $schema$
 
 #----------------------------------
 [user GnuMed owner]
 name = gm-dbowner
-#password = 
+password = 
 
 [user postgres]
 name = postgres
-#password =
+password =
 
 #----------------------------------
 # these really shouldn't be changed
@@ -193,7 +192,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.13  2003-12-29 19:11:13  uid66147
+# Revision 1.14  2004-01-04 06:35:39  ihaywood
+# More sane loggin on Psql.py
+# in monolithic-core, gmPublicAccounts.sql droppped as it repeats gmTestAccounts.sql
+#
+# Revision 1.13  2003/12/29 19:11:13  uid66147
 # - reworked public DB generation
 #
 # Revision 1.12  2003/11/28 08:49:40  ncq
