- no, it does not, PublicAccounts contains any-doc while TestAccounts   provides test-doc and friends, if so then remove TestAccounts as those   aren't mapped to staff entries yet as opposed to any-doc ...

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.14 $
+version = $Revision: 1.15 $
 
 #----------------------------------
 [installation]
@@ -133,6 +133,7 @@ super user alias = postgres
 procedural language library check = yes
 schema base directory = ../sql/
 schema = $schema$
+gmPublicAccounts.sql
 gmTestAccounts.sql
 $schema$
 
@@ -192,7 +193,12 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.14  2004-01-04 06:35:39  ihaywood
+# Revision 1.15  2004-01-04 17:31:07  ncq
+# - no, it does not, PublicAccounts contains any-doc while TestAccounts
+#   provides test-doc and friends, if so then remove TestAccounts as those
+#   aren't mapped to staff entries yet as opposed to any-doc ...
+#
+# Revision 1.14  2004/01/04 06:35:39  ihaywood
 # More sane loggin on Psql.py
 # in monolithic-core, gmPublicAccounts.sql droppped as it repeats gmTestAccounts.sql
 #
