- add schema file base directory

--- a/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-au.conf,v $
-version = $Revision: 1.4 $
+version = $Revision: 1.5 $
 
 #----------------------------------
 [installation]
@@ -50,6 +50,7 @@ server alias = local host
 audit disable = 1
 notification disable = 1
 scoring disable = 1
+schema base directory = ../sql/
 schema = $schema$
 $schema$
 
@@ -94,7 +95,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-au.conf,v $
-# Revision 1.4  2003-12-29 15:19:11  uid66147
+# Revision 1.5  2004-01-05 00:53:58  ncq
+# - add schema file base directory
+#
+# Revision 1.4  2003/12/29 15:19:11  uid66147
 # - disable scoring table generation
 # - for local host set name to empty
 #
