--- a/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -69,7 +69,7 @@ $schema$
 # servers
 #----------------------------------
 [server local host]
-name = 127.0.0.1
+name = 
 port = 5432
 template database = template1
 super user alias = postgres
@@ -106,6 +106,9 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-test_data.conf,v $
-# Revision 1.1  2003-12-29 15:07:03  uid66147
+# Revision 1.2  2004-01-05 00:57:38  ncq
+# - use empty name not 127.0.0.1 to go local
+#
+# Revision 1.1  2003/12/29 15:07:03  uid66147
 # - add test data to databases
 #
