- local connections need empty host name

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.15 $
+version = $Revision: 1.16 $
 
 #----------------------------------
 [installation]
@@ -126,7 +126,7 @@ $schema$
 
 #----------------------------------
 [server local host]
-name =  127.0.0.1
+name =  
 port = 5432
 template database = template1
 super user alias = postgres
@@ -193,7 +193,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.15  2004-01-04 17:31:07  ncq
+# Revision 1.16  2004-01-05 01:02:48  ncq
+# - local connections need empty host name
+#
+# Revision 1.15  2004/01/04 17:31:07  ncq
 # - no, it does not, PublicAccounts contains any-doc while TestAccounts
 #   provides test-doc and friends, if so then remove TestAccounts as those
 #   aren't mapped to staff entries yet as opposed to any-doc ...
