- do ask for passwords as we don't know the setup on other machines

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.16 $
+version = $Revision: 1.17 $
 
 #----------------------------------
 [installation]
@@ -140,11 +140,11 @@ $schema$
 #----------------------------------
 [user GnuMed owner]
 name = gm-dbowner
-password = 
+#password = 
 
 [user postgres]
 name = postgres
-password =
+#password =
 
 #----------------------------------
 # these really shouldn't be changed
@@ -193,7 +193,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.16  2004-01-05 01:02:48  ncq
+# Revision 1.17  2004-01-06 10:20:00  ncq
+# - do ask for passwords as we don't know the setup on other machines
+#
+# Revision 1.16  2004/01/05 01:02:48  ncq
 # - local connections need empty host name
 #
 # Revision 1.15  2004/01/04 17:31:07  ncq
