- add nurse/doc to schema def

--- a/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -38,6 +38,8 @@ schema base directory = ../sql/test-data/
 schema = $schema$
 gmDemographics-Person-test_data.sql
 test_data-Leonard_McCoy.sql
+test_data-Christine_Chapel.sql
+test_data-Julian_Bashir.sql
 test_data-James_Kirk.sql
 $schema$
 
@@ -106,7 +108,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-test_data.conf,v $
-# Revision 1.2  2004-01-05 00:57:38  ncq
+# Revision 1.3  2004-01-10 01:31:14  ncq
+# - add nurse/doc to schema def
+#
+# Revision 1.2  2004/01/05 00:57:38  ncq
 # - use empty name not 127.0.0.1 to go local
 #
 # Revision 1.1  2003/12/29 15:07:03  uid66147
