Nice mode added If script started with no parameters, scans directory and presents menu of configs Tries hard to connect to local database.

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.17 $
+version = $Revision: 1.18 $
 
 #----------------------------------
 [installation]
@@ -126,7 +126,7 @@ $schema$
 
 #----------------------------------
 [server local host]
-name =  
+name = localhost 
 port = 5432
 template database = template1
 super user alias = postgres
@@ -144,7 +144,7 @@ name = gm-dbowner
 
 [user postgres]
 name = postgres
-#password =
+password = blank
 
 #----------------------------------
 # these really shouldn't be changed
@@ -193,7 +193,12 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.17  2004-01-06 10:20:00  ncq
+# Revision 1.18  2004-02-24 11:02:29  ihaywood
+# Nice mode added
+# If script started with no parameters, scans directory and presents menu of configs
+# Tries hard to connect to local database.
+#
+# Revision 1.17  2004/01/06 10:20:00  ncq
 # - do ask for passwords as we don't know the setup on other machines
 #
 # Revision 1.16  2004/01/05 01:02:48  ncq
