support for martial status and occupations .conf files now use host autoprobing

--- a/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-au.conf,v $
-version = $Revision: 1.5 $
+version = $Revision: 1.6 $
 
 #----------------------------------
 [installation]
@@ -58,7 +58,7 @@ $schema$
 # servers
 #----------------------------------
 [server local host]
-name = 
+name = localhost
 port = 5432
 template database = template1
 super user alias = postgres
@@ -75,7 +75,7 @@ name = gm-dbowner
 
 [user postgres]
 name = postgres
-#password =
+password = blank
 
 #----------------------------------
 # these really shouldn't be changed
@@ -95,7 +95,11 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-au.conf,v $
-# Revision 1.5  2004-01-05 00:53:58  ncq
+# Revision 1.6  2004-03-02 10:22:30  ihaywood
+# support for martial status and occupations
+# .conf files now use host autoprobing
+#
+# Revision 1.5  2004/01/05 00:53:58  ncq
 # - add schema file base directory
 #
 # Revision 1.4  2003/12/29 15:19:11  uid66147
