--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.14 $
+version = $Revision: 1.15 $
 
 #----------------------------------
 [installation]
@@ -104,7 +104,7 @@ $schema$
 # servers
 #----------------------------------
 [server local host]
-name = 
+name = localhost 
 port = 5432
 template database = template1
 super user alias = postgres
@@ -121,7 +121,7 @@ name = gm-dbowner
 
 [user postgres]
 name = postgres
-#password =
+password = blank
 
 #----------------------------------
 # these really shouldn't be changed
@@ -141,7 +141,11 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.14  2003-12-29 19:11:13  uid66147
+# Revision 1.15  2004-03-02 10:22:30  ihaywood
+# support for martial status and occupations
+# .conf files now use host autoprobing
+#
+# Revision 1.14  2003/12/29 19:11:13  uid66147
 # - reworked public DB generation
 #
 # Revision 1.13  2003/12/29 15:19:39  uid66147
