--- a/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -71,7 +71,7 @@ $schema$
 # servers
 #----------------------------------
 [server local host]
-name = 
+name = localhost
 port = 5432
 template database = template1
 super user alias = postgres
@@ -88,7 +88,7 @@ name = gm-dbowner
 
 [user postgres]
 name = postgres
-#password =
+password = blank
 
 #----------------------------------
 # these really shouldn't be changed
@@ -108,7 +108,11 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-test_data.conf,v $
-# Revision 1.3  2004-01-10 01:31:14  ncq
+# Revision 1.4  2004-03-02 10:22:30  ihaywood
+# support for martial status and occupations
+# .conf files now use host autoprobing
+#
+# Revision 1.3  2004/01/10 01:31:14  ncq
 # - add nurse/doc to schema def
 #
 # Revision 1.2  2004/01/05 00:57:38  ncq
