--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.22 $
+version = $Revision: 1.23 $
 
 #----------------------------------
 [installation]
@@ -128,7 +128,7 @@ $schema$
 # servers
 #----------------------------------
 [server local host]
-name = 
+name = localhost
 port = 5432
 template database = template1
 super user alias = postgres
@@ -143,11 +143,11 @@ $schema$
 #----------------------------------
 [user GnuMed owner]
 name = gm-dbowner
-#password = 
+password = 
 
 [user postgres]
 name = postgres
-password =
+password = blank
 
 #----------------------------------------------
 # the following sections really shouldn't
@@ -210,7 +210,11 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.22  2003-11-28 08:49:40  ncq
+# Revision 1.23  2004-03-02 10:22:30  ihaywood
+# support for martial status and occupations
+# .conf files now use host autoprobing
+#
+# Revision 1.22  2003/11/28 08:49:40  ncq
 # - add gmNotifications.sql
 #
 # Revision 1.21  2003/11/05 23:51:22  ncq
