--- a/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-au.conf,v $
-version = $Revision: 1.6 $
+version = $Revision: 1.7 $
 
 #----------------------------------
 [installation]
@@ -14,7 +14,7 @@ version = $Revision: 1.6 $
 interactive = yes
 
 description = $description$
-This scripts installs data into a GnuMed database system in
+This script installs data into a GnuMed database system in
 order to localise GnuMed for Australia.
 
 The core database schema must have been imported into a database
@@ -95,7 +95,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-au.conf,v $
-# Revision 1.6  2004-03-02 10:22:30  ihaywood
+# Revision 1.7  2004-03-02 14:16:19  ncq
+# - typo
+#
+# Revision 1.6  2004/03/02 10:22:30  ihaywood
 # support for martial status and occupations
 # .conf files now use host autoprobing
 #
