- import gmFormDefs.sql into clinical service

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.18 $
+version = $Revision: 1.19 $
 
 #----------------------------------
 [installation]
@@ -72,6 +72,7 @@ registration database = core
 schema base directory = ../sql/
 
 schema = $schema$
+gmFormDefs.sql
 gmclinical.sql
 gmMeasurements.sql
 gmClinicalViews.sql
@@ -193,7 +194,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.18  2004-02-24 11:02:29  ihaywood
+# Revision 1.19  2004-03-08 17:05:23  ncq
+# - import gmFormDefs.sql into clinical service
+#
+# Revision 1.18  2004/02/24 11:02:29  ihaywood
 # Nice mode added
 # If script started with no parameters, scans directory and presents menu of configs
 # Tries hard to connect to local database.
