- typo fix - gmFormDefs now merged with gmReference.sql

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.19 $
+version = $Revision: 1.20 $
 
 #----------------------------------
 [installation]
@@ -72,7 +72,6 @@ registration database = core
 schema base directory = ../sql/
 
 schema = $schema$
-gmFormDefs.sql
 gmclinical.sql
 gmMeasurements.sql
 gmClinicalViews.sql
@@ -100,6 +99,7 @@ registration database = core
 schema base directory = ../sql/
 schema = $schema$
 gmReference.sql
+gmReference-data.sql
 $schema$
 
 #----------------------------------
@@ -194,7 +194,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.19  2004-03-08 17:05:23  ncq
+# Revision 1.20  2004-03-09 10:45:03  ncq
+# - typo fix
+# - gmFormDefs now merged with gmReference.sql
+#
+# Revision 1.19  2004/03/08 17:05:23  ncq
 # - import gmFormDefs.sql into clinical service
 #
 # Revision 1.18  2004/02/24 11:02:29  ihaywood
