- added service office (administrivia)

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.20 $
+version = $Revision: 1.21 $
 
 #----------------------------------
 [installation]
@@ -26,10 +26,11 @@ $description$
 
 services = $services$
 config
+reference
 demographics
 clinical
 documents
-reference
+office
 $services$
 
 #----------------------------------
@@ -40,11 +41,9 @@ database alias = core
 postgres version = 7.1
 registration database = core
 schema base directory = ../sql/
-
 schema = $schema$
 gmconfiguration.sql
 $schema$
-
 
 [service demographics]
 name = personalia
@@ -53,7 +52,6 @@ database alias = core
 postgres version = 7.1
 registration database = core
 schema base directory = ../sql/
-
 schema = $schema$
 gmDemographics.sql
 gmDemographics-Person-views.sql
@@ -70,7 +68,6 @@ database alias = core
 postgres version = 7.1
 registration database = core
 schema base directory = ../sql/
-
 schema = $schema$
 gmclinical.sql
 gmMeasurements.sql
@@ -100,6 +97,18 @@ schema base directory = ../sql/
 schema = $schema$
 gmReference.sql
 gmReference-data.sql
+$schema$
+
+[service office]
+name = administrivia
+version = 0.1
+database alias = core
+postgres version = 7.1
+registration database = core
+schema base directory = ../sql/
+schema = $schema$
+gmoffice.sql
+gmOfficeData.sql
 $schema$
 
 #----------------------------------
@@ -194,7 +203,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.20  2004-03-09 10:45:03  ncq
+# Revision 1.21  2004-03-10 14:25:08  ncq
+# - added service office (administrivia)
+#
+# Revision 1.20  2004/03/09 10:45:03  ncq
 # - typo fix
 # - gmFormDefs now merged with gmReference.sql
 #
