- postgres version -> minimum postgresql version

--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.14 $
+version = $Revision: 1.15 $
 
 #----------------------------------
 [installation]
@@ -34,7 +34,7 @@ $services$
 name = default
 version = 0.1
 database alias = gm-archive
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = gm-archive
 schema base directory = ../sql/
 schema = $schema$
@@ -46,7 +46,7 @@ $schema$
 name = personalia
 version = 0.1
 database alias = gm-archive
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = gm-archive
 schema base directory = ../sql/
 schema = $schema$
@@ -63,7 +63,7 @@ $schema$
 name = blobs
 version = 0.1
 database alias = gm-archive
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = gm-archive
 schema base directory = ../sql/
 schema = $schema$
@@ -165,7 +165,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.14  2003-11-28 08:49:40  ncq
+# Revision 1.15  2004-03-14 22:32:04  ncq
+# - postgres version -> minimum postgresql version
+#
+# Revision 1.14  2003/11/28 08:49:40  ncq
 # - add gmNotifications.sql
 #
 # Revision 1.13  2003/11/02 12:48:55  ncq
