--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.15 $
+version = $Revision: 1.16 $
 
 #----------------------------------
 [installation]
@@ -41,7 +41,7 @@ $services$
 name = personalia
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/country.specific/de/
 schema = $schema$
@@ -54,7 +54,7 @@ $schema$
 name = historica
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/country.specific/de/
 schema = $schema$
@@ -70,7 +70,7 @@ $schema$
 name = blobs
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/country.specific/de/
 schema = $schema$
@@ -81,7 +81,7 @@ $schema$
 name = pharmaceutica
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/country.specific/de/
 schema = $schema$
@@ -141,7 +141,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.15  2004-03-02 10:22:30  ihaywood
+# Revision 1.16  2004-03-14 22:32:04  ncq
+# - postgres version -> minimum postgresql version
+#
+# Revision 1.15  2004/03/02 10:22:30  ihaywood
 # support for martial status and occupations
 # .conf files now use host autoprobing
 #
