--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.21 $
+version = $Revision: 1.22 $
 
 #----------------------------------
 [installation]
@@ -38,7 +38,7 @@ $services$
 name = default
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/
 schema = $schema$
@@ -49,7 +49,7 @@ $schema$
 name = personalia
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/
 schema = $schema$
@@ -65,7 +65,7 @@ $schema$
 name = historica
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/
 schema = $schema$
@@ -79,7 +79,7 @@ $schema$
 name = blobs
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/
 schema = $schema$
@@ -91,7 +91,7 @@ $schema$
 name = reference
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/
 schema = $schema$
@@ -103,7 +103,7 @@ $schema$
 name = administrivia
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/
 schema = $schema$
@@ -203,7 +203,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.21  2004-03-10 14:25:08  ncq
+# Revision 1.22  2004-03-14 22:32:04  ncq
+# - postgres version -> minimum postgresql version
+#
+# Revision 1.21  2004/03/10 14:25:08  ncq
 # - added service office (administrivia)
 #
 # Revision 1.20  2004/03/09 10:45:03  ncq
