--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_knoppix.conf,v $
-version = $Revision: 1.6 $
+version = $Revision: 1.7 $
 
 #----------------------------------
 [installation]
@@ -39,7 +39,7 @@ $services$
 name = default
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 
 schema = $schema$
@@ -51,7 +51,7 @@ $schema$
 name = personalia
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 
 # FIXME: add german-chipcard.sql
@@ -71,7 +71,7 @@ $schema$
 name = historica
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 
 # FIXME: add gmLab-de.sql
@@ -88,7 +88,7 @@ $schema$
 name = blobs
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema = $schema$
 sql/gmBlobs.sql
@@ -176,7 +176,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_knoppix.conf,v $
-# Revision 1.6  2003-10-31 23:24:32  ncq
+# Revision 1.7  2004-03-14 22:32:04  ncq
+# - postgres version -> minimum postgresql version
+#
+# Revision 1.6  2003/10/31 23:24:32  ncq
 # - include more test data
 #
 # Revision 1.5  2003/10/01 15:59:20  ncq
