--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.23 $
+version = $Revision: 1.24 $
 
 #----------------------------------
 [installation]
@@ -45,7 +45,7 @@ $services$
 name = default
 version = 0.1
 database alias = core
-postgres version = 7.3
+minimum postgresql version = 7.3
 registration database = core
 schema base directory = ../sql/
 
@@ -58,7 +58,7 @@ $schema$
 name = personalia
 version = 0.1
 database alias = core
-postgres version = 7.3
+minimum postgresql version = 7.3
 registration database = core
 
 schema base directory = ../sql/
@@ -75,7 +75,7 @@ $schema$
 name = historica
 version = 0.1
 database alias = core
-postgres version = 7.3
+minimum postgresql version = 7.3
 registration database = core
 schema base directory = ../sql/
 
@@ -91,7 +91,7 @@ $schema$
 name = blobs
 version = 0.1
 database alias = core
-postgres version = 7.3
+minimum postgresql version = 7.3
 registration database = core
 schema base directory = ../sql/
 schema = $schema$
@@ -210,7 +210,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.23  2004-03-02 10:22:30  ihaywood
+# Revision 1.24  2004-03-14 22:32:04  ncq
+# - postgres version -> minimum postgresql version
+#
+# Revision 1.23  2004/03/02 10:22:30  ihaywood
 # support for martial status and occupations
 # .conf files now use host autoprobing
 #
