--- a/gnumed/gnumed/server/bootstrap/migrate-standard.conf
+++ b/gnumed/gnumed/server/bootstrap/migrate-standard.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/migrate-standard.conf,v $
-version = $Revision: 1.17 $
+version = $Revision: 1.18 $
 
 #----------------------------------
 [installation]
@@ -36,7 +36,7 @@ $services$
 name = default
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/
 schema = $schema$
@@ -47,7 +47,7 @@ $schema$
 name = personalia
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/
 schema = $schema$
@@ -60,7 +60,7 @@ $schema$
 name = historica
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/
 schema = $schema$
@@ -178,7 +178,10 @@ $language activation$
 
 #----------------------------------
 # $Log: migrate-standard.conf,v $
-# Revision 1.17  2003-11-28 10:00:41  ncq
+# Revision 1.18  2004-03-14 22:32:04  ncq
+# - postgres version -> minimum postgresql version
+#
+# Revision 1.17  2003/11/28 10:00:41  ncq
 # - add "notification disable" option
 # - update template conf file
 # - use notification schema generator in bootstrapper
