--- a/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf,v $
-version = $Revision: 1.4 $
+version = $Revision: 1.5 $
 
 #----------------------------------
 [installation]
@@ -33,7 +33,7 @@ $services$
 name = pharmaceutica
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/country.specific/de/
 schema = $schema$
@@ -92,7 +92,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-amis.conf,v $
-# Revision 1.4  2003-11-11 19:22:57  ncq
+# Revision 1.5  2004-03-14 22:32:04  ncq
+# - postgres version -> minimum postgresql version
+#
+# Revision 1.4  2003/11/11 19:22:57  ncq
 # - fix amis bootstrap file
 # - leave name empty for local host
 #
