--- a/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-au.conf,v $
-version = $Revision: 1.7 $
+version = $Revision: 1.8 $
 
 #----------------------------------
 [installation]
@@ -33,7 +33,7 @@ $services$
 name = personalia
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/country.specific/au/
 schema = $schema$
@@ -95,7 +95,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-au.conf,v $
-# Revision 1.7  2004-03-02 14:16:19  ncq
+# Revision 1.8  2004-03-14 22:32:04  ncq
+# - postgres version -> minimum postgresql version
+#
+# Revision 1.7  2004/03/02 14:16:19  ncq
 # - typo
 #
 # Revision 1.6  2004/03/02 10:22:30  ihaywood
