--- a/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf,v $
-version = $Revision: 1.4 $
+version = $Revision: 1.5 $
 
 #----------------------------------
 [installation]
@@ -32,7 +32,7 @@ $services$
 name = historica
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/test-data/
 schema = $schema$
@@ -48,7 +48,7 @@ $schema$
 name = historica
 version = 0.1
 database alias = core
-postgres version = 7.1
+minimum postgresql version = 7.1
 registration database = core
 schema base directory = ../sql/
 schema = $schema$
@@ -108,7 +108,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-test_data.conf,v $
-# Revision 1.4  2004-03-02 10:22:30  ihaywood
+# Revision 1.5  2004-03-14 22:32:04  ncq
+# - postgres version -> minimum postgresql version
+#
+# Revision 1.4  2004/03/02 10:22:30  ihaywood
 # support for martial status and occupations
 # .conf files now use host autoprobing
 #
